Stared working on making a more fleshed out detail view for listings, fixed some forms to actually add manytomany objects, need to go back and make item detail page views visible to everyone

--- a/marketapp/listings/static/css/styles.css
+++ b/marketapp/listings/static/css/styles.css
@@ -97,3 +97,30 @@
   margin-left: -33px !important;
   margin-right: -50px !important;
 }
+
+.listing-header {
+  text-align: center;
+}
+
+.listing-item-container {
+  text-align: center;
+}
+
+.item-display {
+  background-color: #bacad9;
+  display: inline-block;
+  color: black;
+  padding: 10px;
+  border-radius: 20px;
+  width: 300px;
+}
+
+.item-image {
+  text-align: center;
+}
+
+.item-name {
+  text-align: center;
+  font-style: italic;
+  font-weight: bold;
+}
